--- a/nx.json
+++ b/nx.json
@@ -74,7 +74,8 @@
     "@nx/react": {
       "application": {
         "babel": true
-      }
+      },
+      "library": {}
     },
     "@nx/next": {
       "application": {
