--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@swc/helpers": "~0.5.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "cookie-parser": "^1.4.6",
+    "lucide-react": "^0.293.0",
     "nestjs-zod": "^1.2.1",
     "next": "13.4.1",
     "pg": "^8.8.0",
@@ -16,6 +22,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -36,6 +44,7 @@
     "@nx/webpack": "^17.1.2",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/express": "^4.17.19",
@@ -48,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitest/ui": "~0.32.0",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "eslint": "~8.46.0",
     "eslint-config-next": "13.4.1",
@@ -61,10 +71,12 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "10.9.1",
