ci: add Dockerfile for BE

--- a/apps/backend/Dockerfile
+++ b/apps/backend/Dockerfile
@@ -1,36 +1,27 @@
-# Project name
-ARG package_name=fullstack-template-backend
-
-FROM node:16-alpine AS builder
-RUN apk add --no-cache libc6-compat
-# Set working directory
+FROM node:20-alpine3.18 AS builder
 WORKDIR /app
-RUN npm i -g turbo
+# To allow calls to sudo in postinstall scripts to run
+# TODO: look for alternate solution
+RUN apk add sudo
+ENV NX_DAEMON false
 COPY . .
-RUN turbo prune --scope=$package_name --docker
-
-# Add lockfile and package.json's of isolated subworkspace
-FROM node:16-alpine AS installer
-RUN apk add --no-cache libc6-compat
-WORKDIR /app
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/yarn.lock ./package-lock.json
-COPY --from=builder /app/turbo.json ./turbo.json
-#Skip husky when installing
-ENV HUSKY_SKIP_INSTALL=1
 RUN npm ci
+RUN npx nx run backend:build:production
+RUN node trace.js dist/apps/backend ./traced-deps
+# tslib doesn't get installed
+# https://github.com/nrwl/nx/issues/2625
+#RUN npm i tslib
 
-FROM node:16-alpine AS sourcer
-RUN apk add --no-cache libc6-compat
+FROM  node:20-alpine3.18 as runner
 WORKDIR /app
-COPY --from=installer /app/ .
-COPY --from=builder /app/out/full/ .
-COPY .gitignore .gitignore
-RUN yarn global add turbo
-ENV HUSKY_SKIP_INSTALL=1
-RUN turbo run build --scope=package_name --include-dependencies --no-deps
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 backend
+# COPY --from=builder --chown=backend:nodejs /app/traced-deps ./
+# COPY --from=builder --chown=backend:nodejs /app/dist/apps/backend/ ./
+COPY --from=builder --chown=backend:nodejs . .
+USER backend
 
-FROM node:16-alpine as runner
-WORKDIR /app
-COPY --from=sourcer /app/ .
-CMD [ "node", "apps/backend/dist/main.js" ]
+ENV NODE_ENV production
+EXPOSE 2000
+
+CMD [ "node", "app/dist/apps/backend/main.js" ]
