--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "template",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "scripts": {
+    "backend:docker-build": "docker build -t template-be -f apps/backend/Dockerfile --network=host .",
+    "frontend:docker-build": "docker build -t template-fe -f apps/frontend/Dockerfile --network=host .",
+    "backend:docker-run": "docker run -d -p 2000:2000 --env-file ./.env template-be",
+    "frontend:docker-run": "docker run -p 3000:3000 --env-file ./.env template-fe"
+  },
+  "engineStrict": true,
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -56,6 +66,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vercel/nft": "^0.24.3",
     "@vitest/ui": "~0.32.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
